--- a/index.html
+++ b/index.html
@@ -24,8 +24,13 @@
             </div>
             <div class="right-panel">
                 <div class="right-title"><h2>Things to do</h2></div>
-                <div class="right-content"></div>
+                <div class="right-content-container">
+                    <div class="right-content">
+                    
+                    </div>
+                </div>
                 <div class="bottomright">
+                    <button class="procrastinate">PROCRASTINATE!</button>
                     <button class="sortbydate-button">by date</button>
                     <button class= "important-button">important</button>
                     <button id="todoButton">ADD TODO</button>
